to content_set_folder() and img() functions.
- mvc2 pattern improvements: added Super_controller class to /parents folder. A Super Contoller Class will control your
Global Controller files from now on.
- changed loader::file('folder/file') as loader::file('folder/file'.EXT) .
- added current_url(), current_dir(), current_class(), current_method() functions to Url helper.
- loading model from another path bug fixed. added 'models' string and DS.
- added $config['subhelper_prefix'] = 'my_';  to config.php file. 
- added sess_get_flash( $prefix = '', $suffix = '') func. parameters to session drivers.
- added base_url(), site_url() functions to url helper file.,
- added set  auto_base_url() , base_url and source_url functions to config class, updated source_url() function.
- changed css(filename.css), js(filename.js), img(filename.ext) functions as css(css/filename.css), js(js/filename.js), img(images/filename.ext);
- added extra ='' (attributes) param to form_hidden(); function..
- added content_view('', (object)$data); support ..
- added script(), app_script(), base_script() functions to head tag helper.
- ini_set('display_errors', ..); date_default_timezone_set(..); functions moved to App_controller
//-----------------------------------------------------------------------------

@todo .. note to USERGUIDE for the framework portability YOU should use fetchAll instead fetch() function.

@todo .. idea ! add set_callback('function', param1, param1..) instead of set_rules('|callback_function')
@todo .. base helpers extend support
@todo .. output cache filemtime
@todo .. remove _SESSION global from input helper
@todo .. Pdo has mysql_free_result solution ?
@todo .. upload class security
@todo .. add config load and lang load track support for profiler class
@todo .. pager class
         
@next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 