@@ -6,7 +6,7 @@ Class Start extends Controller {
     {   
         parent::__construct();
         parent::__global();
-        
+
         $this->output->profiler();
         
     }                                      
@@ -15,6 +15,9 @@ Class Start extends Controller {
     {  
         $this->title = 'Welcome to Obullo Framework !';        
         $data['var'] = 'This page generated by Obullo Framework.';
+                         
+        table::instance();
+        form_validate::instance();
                          
         $this->body  = view('view_welcome', $data);
         view_app('view_base_layout');
